src/config/service/worker/pg/snapshots/roadster__config__service__worker__pg__deserialize_tests__worker_pg@case_02.snap
---
source: src/config/service/worker/pg/mod.rs
expression: worker_pg
---
[database]
uri = 'postgres://[Sensitive]'
temporary-test-db = false
temporary-test-db-clean-up = true
connect-timeout = 1000
connect-lazy = true
acquire-timeout = 1000
min-connections = 0
max-connections = 1
test-on-checkout = true
retry-connection = true
enable-statement-logging = false

[periodic]
enable = false
stale-cleanup = 'auto-clean-stale'

[pgmq]
install = false
