src/config/service/worker/pg/snapshots/roadster__config__service__worker__pg__deserialize_tests__worker_pg@case_03.snap
---
source: src/config/service/worker/pg/mod.rs
expression: worker_pg
---
num-workers = 1

[db-pool]
uri = 'redis://[Sensitive]'
connect-timeout = 1000
connect-lazy = true
acquire-timeout = 1000
min-connections = 0
max-connections = 1
test-on-checkout = true

[worker-config]
