src/config/service/worker/pg/snapshots/roadster__config__service__worker__pg__deserialize_tests__worker_pg@case_04.snap
---
source: src/config/service/worker/pg/mod.rs
expression: worker_pg
---
[database]
temporary-test-db = false
temporary-test-db-clean-up = true
connect-timeout = 2000
connect-lazy = true
acquire-timeout = 5000
idle-timeout = 10000
max-lifetime = 60000
min-connections = 5
max-connections = 6
test-on-checkout = true
retry-connection = true
enable-statement-logging = false

[periodic]
enable = false
stale-cleanup = 'auto-clean-stale'

[pgmq]
install = false
