src/config/service/worker/pg/snapshots/roadster__config__service__worker__pg__deserialize_tests__worker_pg@case_06.snap
---
source: src/config/service/worker/pg/mod.rs
expression: worker_pg
---
num-workers = 1

[postgres]
connect-timeout = 1000
connect-lazy = true
acquire-timeout = 1000
min-connections = 0
max-connections = 1
test-on-checkout = true

[worker-config]
max-retries = 25
timeout = true
max-duration = 60
success-action = 'delete'
failure-action = 'archive'
